# chip8_emulator

./: Cargo.toml  README.md
src/: chip8.rs  error.rs  lib.rs  main.rs
