[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"
author = "ChristinoD111"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = "0.35.2"
spin = "0.9.4"
thiserror = "1.0.38"
